[metadata]
name = ez_deploy
description = Easy Deployment Tool
author = Gerhard Tan
author_email = gerhard.gh.ta@gmail.com
home-page = https://github.com/koho/ez_deploy
long-description = file: README.md
long_description_content_type = text/markdown
platform = any

[options]
setup_requires = setuptools_scm
py_modules = ez_deploy
python_requires	= >=3.5
install_requires =
  srvwrapper; sys_platform == "win32"

[options.entry_points]
# Add here console scripts like:
console_scripts =
    ez-deploy = ez_deploy:main
